--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -66,7 +66,26 @@
 
   },
   "organization": {
-
+    "title": "Structural Organization",
+    "header": {
+      "addButton": "Add"
+    },
+    "chart": {
+      "ownerAlt": "Owner photo",
+      "ownerTitle": "Owner",
+      "adminAlt": "Administrator photo",
+      "adminTitle": "Administrator"
+    },
+    "modal": {
+      "title": "Invite administrator",
+      "emailLabel": "Email address",
+      "emailPlaceholder": "Enter email",
+      "submitButton": "Add",
+      "validation": {
+        "emailRequired": "Please enter a valid email"
+      },
+      "successMessage": "Invitation sent to {email}"
+    }
   },
   "guest-reservations": {
 
