chore(i18n): added i18n to analytics page.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,11 @@
 ﻿{
   "analytics": {
-
+    "overview": "Overview reporting",
+    "loading": "Loading income data...",
+    "line-chart": {
+      "weekly": "Weekly Profit",
+      "monthly": "Monthly Profit"
+    }
   },
   "checkout": {
 
