--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,7 +44,31 @@
 
   },
   "inventory": {
-
+    "title": "Inventory",
+    "delete": "Delete",
+    "add": "Add",
+    "info": {
+      "id": "ID",
+      "name": "Name",
+      "price": "Price",
+      "quantity": "Quantity",
+      "stock": "Stock",
+      "provider": "Provider"
+    },
+    "deleteButton": {
+      "confirm": "Are you sure?",
+      "message": "The selected items will be removed from inventory.",
+      "cancel": "Close",
+      "delete": "Delete"
+    },
+    "addButton": {
+      "title": "New Product",
+      "name": "Product's name",
+      "price": "Price",
+      "quantity": "Current Quantity",
+      "cancel": "Cancel",
+      "add": "Add"
+    }
   },
   "providers": {
     "title": "Providers",
