fix(i18n): corrected i18n for analytics page.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,9 @@
     "loading": "Loading income data...",
     "line-chart": {
       "weekly": "Weekly Profit",
-      "monthly": "Monthly Profit"
+      "monthly": "Monthly Profit",
+      "expenses": "Expenses",
+      "incomes": "Incomes"
     }
   },
   "checkout": {
