refactor: updated english translation for hotel register form.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -178,7 +178,7 @@
     "subtitle": "Complete the following form",
     "registration-form": {
       "hotel-name": "Hotel's name",
-      "hotel-address": "Hotel's description",
+      "hotel-address": "Hotel's address",
       "hotel-phone": "Hotel's phone number",
       "hotel-email": "Hotel's mail",
       "hotel-description": "Hotel's description",
