feat: i18n es updated with user reservation

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -348,7 +348,8 @@
     "inactiveStatus": "NO ACTIVA",
     "cancelButton": "Cancelar",
     "cancelConfirmation": "¿Estás seguro de cancelar tu reserva en {hotelName}?",
-    "cancelSuccess": "Reserva cancelada para {hotelName}"
+    "cancelSuccess": "Reserva cancelada para {hotelName}",
+    "cancelledStatus": "CANCELADA"
   }
 }
 
