feat(providers): added check-in and check-out feature.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -299,7 +299,8 @@
     }
   },
   "reservations": {
-
+    "title": "Reservas",
+    "newBooking": "Nueva Reserva"
   },
   "rooms": {
     "title": "Habitaciones",
