update: connecting admin with owner organization hotel

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -216,7 +216,7 @@
         "suite-room": "Suite",
         "matrimonial-room": "Matrimonial room"
       },
-      "admin-invite": "Invite admin",
+      "admin-invite": "Add admin",
       "admin-mail": "Electronic mail",
       "back-button": "Back",
       "next-button": "Continue"
