--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -217,7 +217,7 @@
         "suite-room": "Suite",
         "matrimonial-room": "Habitación matrimonial"
       },
-      "admin-invite": "Invitar a administrador",
+      "admin-invite": "Agregar a administrador",
       "admin-mail": "Correo electronico",
       "back-button": "Atrás",
       "next-button": "Continuar"
